--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
 <ul>
   {{ $pages := .Pages }}
   {{ if .IsHome }}{{ $pages = .Site.RegularPages }}{{ end }}
-  {{ range (where $pages "Section" "!=" "") }}
+  {{ range .Pages }}
   <h4>
     <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
     <span class="date">{{ .Date | time.Format ":date_long" }}</span>
