--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,7 +9,7 @@
   {{ range .Pages }}
   <h4>
     <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a>
-    <span class="date">{{ .Date | time.Format ":date_long" }}</span>
+    <span class="date"> - {{ .Date | time.Format ":date_long" }}</span>
   </h4>
   {{ end }}
 </ul>
