--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,17 +1,17 @@
-  <footer>
-    <hr/>
-    
-        {{ if .IsHome }}
-        {{ if .Site.Params.rss }}
-          <a href="{{.Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">{{ .Site.Params.rss }}</a>
-        {{ end }}
-        {{ with .Site.Params.social }}
-        {{ range . }}
-          | <a href="{{ .url }}" target="_blank" rel="noreferrer noopener me">{{ .title }}</a>
-        {{ end }}
-        {{ end }}
-        {{ end }}
-    
-  </footer>
-  </body>
+<footer>
+  <hr />
+  {{ if .IsHome }}
+  {{ if .Site.Params.rss }}
+  <a href="{{.Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">{{
+    .Site.Params.rss }}</a>
+  {{ end }}
+  {{ with .Site.Params.social }}
+  {{ range . }}
+  | <a href="{{ .url }}" target="_blank" rel="noreferrer noopener me">{{ .title }}</a>
+  {{ end }}
+  {{ end }}
+  {{ end }}
+</footer>
+</body>
+
 </html>
